# Space-Invaders-Pygame-RL-Genetic-Agents

./: .gitignore  LICENSE  README.md  config.py  evaluate.py  game.py  game_with_numpy.py  main.py  pyproject.toml  requirements.txt  run_game_ai.py  test.py  train.py
agents/: a2c_agent.py  agent.py  dqn_agent.py  genetic_agent.py  neat_agent.py  ppo_agent.py  random_agent.py
configs/: a2c_default.json  dqn_default.json  genetic_default.json  neat_config.txt  neat_default.json  ppo_default.json
game/: __init__.py  assets.py  config.py  game.py  game_manager.py  gym_environment.py  sprites.py  ui_elements.py
models/: a2c_spaceinvaders.pth
utils/: agent_factory.py  cli_args.py  episode_runner.py  model_helpers.py  report_utils.py  serial_training_loop.py  training_helpers.py
